--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/6.jpg);">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
@@ -180,7 +180,7 @@
 		</div>
 	</div>
 
-	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/img_bg_3.jpg);">
+	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/2.jpg);">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
