--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Greatness &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>شركة افاق السحب</title>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -43,7 +44,7 @@
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
-
+	<link rel="icon" sizes="180x180" href="images/lo5.png">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -170,7 +171,7 @@
 	</div>
 
 	
-	<div id="gtco-counter" class="gtco-bg gtco-cover gtco-counter" style="background-image:url(images/img_bg_2.jpg);">
+	<div id="gtco-counter" class="gtco-bg gtco-cover gtco-counter" style="background-image:url(images/7744.jpg);">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
