--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Greatness &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>شركة افاق السحب</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -86,7 +86,7 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/img_bg_1.jpg);">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image:url(images/1231.jpg);">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
@@ -143,7 +143,7 @@
 	</div>
 
 
-	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/img_bg_3.jpg);">
+	<div class="gtco-cover gtco-cover-sm" style="background-image:url(images/dad.jpg);">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
