--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		</div>
 	</nav>
 
-	<header id="gtco-header" class="gtco-cover" role="banner" style="background-image:url(images/lo5.png)">
+	<header id="gtco-header" class="gtco-cover" role="article" style="">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
