--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
 -->
 <html>
 	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>شركة افاق السحب</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>شركة افاق السحب</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="شركة تتصميم مواقع الكترونية و برامج محاسبية متخصصة" />
+		<meta name="keywords" content="برامج ,محاسبة ,تصميم,ادارات,مواقع ,الكترونية,تصاميم مواقع الكترونية,تصاميم برامج محاسبية," />
+		<meta name="author" content="شركة افاق السحب" />
 
 	
 
