--- a/services.html
+++ b/services.html
@@ -164,7 +164,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h2>لماذ تختار شركة افاق السحب</h2>
-					<p>اننا في شركة اافاق السحب ...............</p>
+					<p>
 				</div>
 			</div>
 			<div class="row">
@@ -174,8 +174,8 @@
 							<i class="icon-check"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>نص</h3>
-							<p>نص</p>
+							<h3>الثقة</h3>
+							<p>	نحن ندير مجموعة واسعة وحساسة من العملاء , والثقة هي العمود الفقري لدينا</p>
 						</div>
 					</div>
 
@@ -184,8 +184,10 @@
 							<i class="icon-check"></i>
 						</span>
 						<div class="feature-copy">
-							<h3></h3>
-							<p>نص</p>
+							<h3>الدعم</h3>
+							<p>سوف تكون في أيد أمينة . والدعم هي واحدة من أولوياتنا
+
+							</p>
 						</div>
 					</div>
 
@@ -194,8 +196,11 @@
 							<i class="icon-check"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>نص</h3>
-							<p>نص</p>
+							<h3>الجودة
+							</h3>
+							<p>عندما يتعلق الأمر بتلبية احتياجات عملائنا وتوفير بيئة جيدة لهم فكُن على ثقة شديدة أنك فى يد أمينة ، وسنقوم بالتركيز معآ على أدق التفاصيل
+
+							</p>
 						</div>
 					</div>
 
