--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>شركة افاق السحب</title>
+		<title>مؤسسة افاق السحب</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="شركة تتصميم مواقع الكترونية و برامج محاسبية متخصصة" />
 		<meta name="keywords" content="برامج ,محاسبة ,تصميم,ادارات,مواقع ,الكترونية,تصاميم مواقع الكترونية,تصاميم برامج محاسبية," />
@@ -62,7 +62,7 @@
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
 			<div class="row">
-				<div id="gtco-logo" ><a href="index.html" style="color: aquamarine; ">شركة افاق السحب</a></div>
+				<div id="gtco-logo" ><a href="index.html" style="color: rgb(246, 253, 251); ">مؤسسة افاق السحوب</a></div>
 
 				<div class="col-xs-2">
 				</div>
