--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
 			<div class="row">
-				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); ">  مؤسسة افاق السحب </a></div>
+				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); ">  </a></div>
 
 				<div class="col-xs-2">
 				</div>
@@ -95,7 +95,7 @@
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1 style="color: rgb(255, 255, 255);"></h1>
+							<h1 style="color: rgb(255, 255, 255);">  افاق السحب</h1>
 							<p>
 								 
 						</div>
