--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1 style="color: rgb(255, 255, 255);">  افاق السحب</h1>
+							<h1 style="color: rgb(255, 255, 255);">  افاق السحب لتقنية المعلومات </h1>
 							<p>
 								 
 						</div>
