--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 				<h2>   كلمة فريق العمل  </h2>
-				<h3 style="font-style: italic;">فريق عمل نموذجي طموح يتسم بالشفافية والأمانة والإخلاص في العمل نعمل على تزويد عملانا بكل ماهو جديد ومفيد في مجال التقنية ويساعد على تطوير المنشآت من حيث البحث المستمر والتدقيق والمراجعة في مصداقية المعلومات ومشاركة التجارب وتبادل المعلومات مع الشركات العالمية والمحلية ومراكز الأبحاث . </h3>
+				<h3  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">فريق عمل نموذجي طموح يتسم بالشفافية والأمانة والإخلاص في العمل نعمل على تزويد عملانا بكل ماهو جديد ومفيد في مجال التقنية ويساعد على تطوير المنشآت من حيث البحث المستمر والتدقيق والمراجعة في مصداقية المعلومات ومشاركة التجارب وتبادل المعلومات مع الشركات العالمية والمحلية ومراكز الأبحاث . </h3>
 			</div>
 		</div>
 
@@ -207,7 +207,7 @@
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 						<h2>     الروية   </h2>
-						<h3 style="font-style: italic;" >عمل جاهدين على المستقبل وتصخير الإمكانيات لي كي نكون في مصفوفة الشركات العالمية انطلاقاً من هذا البلد المعطاء . </h3>
+						<h3  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" >عمل جاهدين على المستقبل وتصخير الإمكانيات لي كي نكون في مصفوفة الشركات العالمية انطلاقاً من هذا البلد المعطاء . </h3>
 					</div>
 				</div>
 		
