--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
 						<ul>
 							<li class="address">الرياض, <br> تحديد </li>
 							<li class="phone"><a href="tel://+966544757245">  </a></li>
-							<li class="email"><a href="mailto:moOaf_m_j@hotmail.com">moOaf_m_j@hotmail.com</a></li>
+							<li class="email"><a href="mailto:moOaf_m_j@hotmail.com">afaq-ss@hotmail.com</a></li>
 						</ul>
 					</div>
 
