--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>مؤسسة افاق السحب</title>
+		<title>آفاق السحب لتقنية المعلومات</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="شركة تتصميم مواقع الكترونية و برامج محاسبية متخصصة" />
 		<meta name="keywords" content="برامج ,محاسبة ,تصميم,ادارات,مواقع ,الكترونية,تصاميم مواقع الكترونية,تصاميم برامج محاسبية," />
@@ -42,6 +42,7 @@
 	<!-- Owl Carousel  -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="icon" sizes="180x180" href="images/lo5.png">
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
@@ -62,7 +63,7 @@
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
 			<div class="row">
-				<div id="gtco-logo" ><a href="index.html" style="color: rgb(246, 253, 251); ">مؤسسة افاق السحوب</a></div>
+				<div id="gtco-logo" ><a href="index.html" style="color: rgb(246, 253, 251); ">آفاق السحب لتقنية المعلومات</a></div>
 
 				<div class="col-xs-2">
 				</div>
@@ -107,7 +108,7 @@
 		<div class="gtco-container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2> شركة افاق السحب</h2>
+					<h2> آفاق السحب لتقنية المعلومات</h2>
 					<p>لإن الرؤية التي قامت عليها والرسالة التي تهدف الى تحقيقها، والاستراتيجية التي تعمل بها في سبيل تحقيق الرؤية والرسالة تجعلنا الوجهه المفضة لكل البحاثين عن الحلول لأعمالهم...					</p>
 				</div>
 			</div>
