--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>مؤسسة افاق السحب</title>
+		<title>آفاق السحب لتقنية المعلومات</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="شركة تتصميم مواقع الكترونية و برامج محاسبية متخصصة" />
 		<meta name="keywords" content="برامج ,محاسبة ,تصميم,ادارات,مواقع ,الكترونية,تصاميم مواقع الكترونية,تصاميم برامج محاسبية," />
@@ -52,6 +52,7 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+	<link rel="icon" sizes="180x180" href="images/lo5.png">
 
 	</head>
 	<body>
@@ -62,7 +63,7 @@
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
 			<div class="row">
-				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); ">مؤسسة افاق السحب</a></div>
+				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); ">آفاق السحب لتقنية المعلومات</a></div>
 
 				<div class="col-xs-2">
 					
