--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>مؤسسة افاق السحب</title>
+		<title> آفاق السحب لتقنية المعلومات</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="مؤسسة تتصميم مواقع الكترونية و برامج محاسبية متخصصة" />
 		<meta name="keywords" content="برامج ,محاسبة ,تصميم,ادارات,مواقع ,الكترونية,تصاميم مواقع الكترونية,تصاميم برامج محاسبية," />
@@ -151,8 +151,8 @@
 									<i class="icon-eye"></i>
 								</span>
 
-								<span class="counter js-counter" data-from="0" data-to="3281" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label"><h2>طلبات الاعمال طلبات الاعمال </h2></span>
+								<span class="counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter-label"><h2> طلبات الاعمال </h2></span>
 
 							</div>
 						</div>
@@ -162,7 +162,7 @@
 									<i class="icon-anchor"></i>
 								</span>
 
-								<span class="counter js-counter" data-from="0" data-to="98" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50">1</span>
 								<span class="counter-label"><h2>عدد عملانا</h2></span>
 							</div>
 						</div>
@@ -171,7 +171,7 @@
 								<span class="icon">
 									<i class="icon-briefcase"></i>
 								</span>
-								<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50">1</span>
 								<span class="counter-label"><h2>الاعمال الانجزت</h2></span>
 							</div>
 						</div>
@@ -181,7 +181,7 @@
 									<i class="icon-clock"></i>
 								</span>
 
-								<span class="counter js-counter" data-from="0" data-to="5740" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50">1</span>
 								<span class="counter-label"><h2>عدد الساعات لانجاز جميع الاعمال </h2></span>
 
 							</div>
