--- a/services.html
+++ b/services.html
@@ -27,7 +27,8 @@
 	<meta name="twitter:card" content="" />
 
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	
+	<link rel="icon" sizes="180x180" href="images/lo5.png">
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -61,7 +62,7 @@
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
 			<div class="row">
-				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); ">مؤسسة افاق السحب</a></div>
+				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); "> آفاق السحب لتقنية المعلومات</a></div>
 
 				<div class="col-xs-2">
 				</div>
@@ -94,7 +95,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1></h1></h2>
+							<h1> </h1></h2>
 						</div>
 					</div>
 				</div>
@@ -151,7 +152,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>لسنا الوحيدون ولكننا الافضل</h1>
+							<h1>الوصول للقمة سهل لكن البقاء هو الاصعب وهذا ما نطمح اليه</h1>
 						</div>
 					</div>
 				</div>
