--- a/services.html
+++ b/services.html
@@ -176,7 +176,7 @@
 						</span>
 						<div class="feature-copy">
 							<h3>الثقة</h3>
-							<p>	نحن ندير مجموعة واسعة وحساسة من العملاء , والثقة هي العمود الفقري لدينا</p>
+							<p>	الثقة ليست وهبه بلى مكتسبه وهي مانسع جاهداً لكسبها بالتعامل معكم</p>
 						</div>
 					</div>
 
