--- a/services.html
+++ b/services.html
@@ -164,7 +164,7 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>لماذ تختار شركة افاق السحب</h2>
+					<h2>لماذ تختار آفاق السحب لتقنية المعلومات</h2>
 					<p>
 				</div>
 			</div>
