--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
 			<div class="row">
-				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); ">آفاق السحب لتقنية المعلومات</a></div>
+				<div id="gtco-logo" ><a href="index.html" style="color: rgb(255, 255, 255); ">  </a></div>
 
 				<div class="col-xs-2">
 					
@@ -92,7 +92,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>  </h1>
+							<h1>آفاق السحب لتقنية المعلومات  </h1>
 						</div>
 					</div>
 				</div>
