--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 					<ul>
 						<li class="active"><a href="index.html">الرئيسية</a></li>
 						<li  ><a href="about.html">من نحن</a></li>
+						<li  ><a href="/english/engilsh.html">english </a></li>
 						<li class="has-dropdown">
 							<a href="services.html">خدماتنا</a>
 						
